syntax = "proto3";

package zitadel.settings.v2;

option go_package = "github.com/zitadel/zitadel/pkg/grpc/settings/v2;settings";

import "protoc-gen-openapiv2/options/annotations.proto";
import "zitadel/settings/v2/settings.proto";

message DomainSettings {
  // If enabled, the login name will automatically be suffixed with the domain of the organization.
  // This ensures that the login name is unique across the instance.
  bool login_name_includes_domain = 1;

  // If enabled, organization domains must be verified (through an DNS or HTTP challenge) upon creation.
  // If disabled, organization domains will be created as already verified automatically.
  bool require_org_domain_verification = 2;

  // If enabled, the SMTP sender address domain must match custom domain on the instance.
  bool smtp_sender_address_matches_instance_domain = 3;

  // ResourceOwnerType returns if the setting is managed on the organization explicitly or
  // fell back on the instance settings.
  ResourceOwnerType resource_owner_type = 6;
}

